# bilibili-s-daily-report-

./: .gitignore  README.md
.github/workflows/: daily.yml
bilibili-watch-report/: .env.example  .gitignore  README.md  pyproject.toml
bilibili-watch-report/data/metrics/: daily.jsonl
bilibili-watch-report/data/raw/: 2026-06-17.json  2026-06-18.json  2026-06-19.json
bilibili-watch-report/data/reports/: 2026-06-17.html  2026-06-18.html  2026-06-19.html
bilibili-watch-report/site/: data.json  index.html
bilibili-watch-report/src/bili_report/: __init__.py  analyze.py  cli.py  client.py  comparison.py  config.py  emailer.py  insights.py  models.py  report.py
bilibili-watch-report/tests/: test_analyze.py  test_cli_integration.py  test_client.py  test_comparison.py  test_config.py  test_insights.py  test_report_email.py  test_workflow_static.py
bilibili-watch-report/tests/fixtures/: enriched_2026-06-17.json  history_pages.json  video_details.json
docs/product/: current-state.md
日报HTML设计方案/: B站观看日报.dc.html
日报HTML设计方案/uploads/: 2026-06-17.html
