[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bilibili-watch-report"
version = "0.1.0"
description = "Private daily Bilibili watch-history analytics, email report, and static dashboard."
requires-python = ">=3.11"
dependencies = ["certifi>=2024.8.30"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
bili-report = "bili_report.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
